add lec7 introComputation.

--- a/IntroComputation/Lectures/lec_1.tex
+++ b/IntroComputation/Lectures/lec_1.tex
@@ -274,7 +274,7 @@ Assume $A, B$ are given languages,
     \]
     which can also be defined as
     \[
-        \bigcup_{i=1}^\infty A_i = \{\epsilon\} \cup A \cup A^2 \cup A^3 \cup \cdots, \quad A^0 = \{\epsilon\}, \ A^n = \{wv \;|\; w \in A^{n-1}, v \in A\}
+        \bigcup_{i=1}^\infty A_i = \{\varepsilon\} \cup A \cup A^2 \cup A^3 \cup \cdots, \quad A^0 = \{\varepsilon\}, \ A^n = \{wv \;|\; w \in A^{n-1}, v \in A\}
     \]
 \end{definition}
 \end{definition*}
