--- a/IntroComputation/header.tex
+++ b/IntroComputation/header.tex
@@ -252,6 +252,7 @@
 \declaretheorem[style=thmpinkbox, name=Problem, numbered=no]{problem*}
 \declaretheorem[style=thmblue2box, name=Claim, numbered=no]{claim}
 \declaretheorem[style=conjpurplebox, name=Conjecture, numberwithin=section]{conjecture}
+\declaretheorem[style=conjpurplebox, name=Idea, numbered=no]{idea}
 
 \renewcommand\theHdefinition{\thesection.\arabic {definition}}
 \renewcommand\theHtheorem{\thesection.\arabic {theorem}}
